--- a/cardano-sl.cabal
+++ b/cardano-sl.cabal
@@ -756,6 +756,42 @@ executable cardano-smart-generator
   if flag(for-installer)
     buildable: False
 
+executable cardano-block-gen
+  hs-source-dirs:      src/block-gen
+  main-is:             Main.hs
+  other-modules:       BlockGenOptions
+  if !flag(for-installer)
+   build-depends:      QuickCheck
+                     , base
+                     , cardano-sl-core
+                     -- , cardano-sl-infra
+                     -- , cardano-sl-txp
+                     -- , cardano-sl-update
+                     -- , cardano-sl-ssc
+                     , ansi-wl-pprint
+                     , cardano-sl
+                     , optparse-applicative
+                     , universum >= 0.1.11
+  default-language:    Haskell2010
+  ghc-options:         -threaded -rtsopts
+                       -Wall
+                       -fno-warn-orphans
+                       -O2
+
+  -- linker speed up for linux
+  if os(linux)
+    ghc-options:       -optl-fuse-ld=gold
+    ld-options:        -fuse-ld=gold
+
+  default-extensions:   RecordWildCards
+                        NoImplicitPrelude
+
+  build-tools: cpphs >= 1.19
+  ghc-options: -pgmP cpphs -optP --cpp
+
+  if flag(for-installer)
+    buildable: False
+
 executable cardano-dht-keygen
   hs-source-dirs:      src/dht-keygen
   main-is:             Main.hs
