--- a/cardano-sl.cabal
+++ b/cardano-sl.cabal
@@ -759,17 +759,23 @@ executable cardano-smart-generator
 executable cardano-block-gen
   hs-source-dirs:      src/block-gen
   main-is:             Main.hs
-  other-modules:       BlockGenOptions
+  other-modules:       Options
+                       Context
   if !flag(for-installer)
    build-depends:      QuickCheck
-                     , base
-                     , cardano-sl-core
-                     -- , cardano-sl-infra
-                     -- , cardano-sl-txp
-                     -- , cardano-sl-update
-                     -- , cardano-sl-ssc
                      , ansi-wl-pprint
+                     , base
                      , cardano-sl
+                     , cardano-sl-core
+                     , cardano-sl-db
+                     , cardano-sl-infra
+                     , cardano-sl-ssc
+                     , data-default
+                     , formatting
+                     , log-warper
+                     , mtl
+                     , node-sketch
+                     , stm-containers
                      , optparse-applicative
                      , universum >= 0.1.11
   default-language:    Haskell2010
@@ -785,6 +791,7 @@ executable cardano-block-gen
 
   default-extensions:   RecordWildCards
                         NoImplicitPrelude
+                        OverloadedStrings
 
   build-tools: cpphs >= 1.19
   ghc-options: -pgmP cpphs -optP --cpp
