--- a/cardano-sl.cabal
+++ b/cardano-sl.cabal
@@ -209,6 +209,7 @@ library
                         -- Arbitrary data generation
                         Pos.Generator.Block.Error
                         Pos.Generator.Block.Logic
+                        Pos.Generator.Block.Payload
                         Pos.Generator.Block.Mode
                         Pos.Generator.Block.Param
 
@@ -377,6 +378,7 @@ library
                       , mmorph
                       , monad-control
                       , monad-loops
+                      , MonadRandom
                       , mono-traversable
                       , mtl
                       , neat-interpolation
